# SpectrumPilot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-release.yml
apps/desktop/: package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.css  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/resources/3gpp/catalog_seed/: download-manifest.json  seed.json
apps/desktop/src-tauri/resources/3gpp/catalog_seed/compact/index/: C1_15.json  C1_16.json  C1_25.json  C1_26.json  C3_05.json  C4_24.json  C4_25.json  CP_25.json  R1_20.json  R1_25.json  R1_26.json  R2_24.json  R2_25.json  R2_26.json  R3_23.json  R3_26.json  R4_25.json  R4_26.json  S1_23.json  S1_24.json  S2_24.json  S2_25.json  S3_24.json  S3_25.json  S4_24.json  S4_25.json  S4_26.json  S5_23.json  S5_24.json  S5_25.json  S6_25.json  S6_26.json  SP_24.json  SP_25.json
apps/desktop/src-tauri/resources/3gpp/catalog_seed/compact/records/: CT.json  CT1.json  CT3.json  CT4.json  RAN.json  RAN1.json  RAN2.json  RAN4.json  SA1.json  SA3.json
apps/desktop/src-tauri/resources/3gpp/catalog_seed/indexes/tdoc/R2/: 25.json  26.json
apps/desktop/src-tauri/resources/3gpp/catalog_seed/records/tdoc/RAN2/: TSGR2_132.json  TSGR2_133bis.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/gpp/: download.rs  jobs.rs  mod.rs  workflow.rs
crates/3gpp-core/: Cargo.toml
crates/3gpp-core/src/: catalog.rs  compact.rs  error.rs  index.rs  lib.rs  manifest.rs  model.rs  normalize.rs  parser.rs  query.rs  resolver.rs  specs.rs  tdoc.rs
crates/3gpp-core/tests/: catalog_tests.rs  compact_catalog_tests.rs  domain_mapping_tests.rs  manifest_tests.rs  normalize_tests.rs  parser_tests.rs  query_tests.rs  resolver_tests.rs  sharded_catalog_tests.rs  specs_tests.rs  tdoc_tests.rs
crates/3gpp-core/tests/support/: file_records.rs
docs/: README.md  STRUCTURE.md
docs/future/: README.md  ai-assisted-research-roadmap.md
docs/rules/: README.md  product-language.md
docs/v0.1/: README.md
(+105 files in other folders)
