[package]
name = "spectrum-pilot-desktop"
version = "0.1.0"
description = "SpectrumPilot desktop app"
authors = ["hzh000sunny"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spectrum_pilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
spectrumpilot-3gpp-core = { path = "../../../crates/3gpp-core", package = "spectrum-3gpp-core" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-util = "0.7"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"
futures-util = "0.3"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
